[gd_scene load_steps=8 format=2]

[ext_resource path="res://resources/particles/BaseGunBullet.tres" type="Material" id=1]
[ext_resource path="res://resources/scripts/player/Bullet.gd" type="Script" id=2]
[ext_resource path="res://resources/particles/baseguncolor.tres" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 3.0

[sub_resource type="Curve" id=3]
max_value = 3.0
_data = [ Vector2( 0, 1.29964 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 5
emission_ring_radius = 0.01
emission_ring_inner_radius = 0.0
emission_ring_height = 0.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
initial_velocity_random = 1.0
angular_velocity = 21.18
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_random = 0.6
scale_curve = SubResource( 4 )
color_ramp = ExtResource( 3 )

[node name="Bullet" type="Area2D"]
rotation = -1.5708
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
rotation = -0.00472599
amount = 10
lifetime = 2.0
randomness = 0.06
process_material = ExtResource( 1 )

[node name="RayCast" type="RayCast2D" parent="."]
position = Vector2( -5, 0 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, -15 )

[node name="CollisionParticles" type="Particles2D" parent="."]
emitting = false
amount = 10
lifetime = 0.2
one_shot = true
explosiveness = 0.61
process_material = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
